Performed minor refactorings and fixed the formatting.